base/matrix/volumes_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: continuwuity
spec:
  template:
    spec:
      volumes: 
      - hostPath: 
          path: /opt/matrix/continuwuity 
          type: DirectoryOrCreate 
        name: continuwuity-home
      - hostPath: 
          path: /opt/matrix
          type: DirectoryOrCreate 
        name: matrix-home
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mautrix-wsproxy
spec:
  template:
    spec:
      volumes: 
      - hostPath: 
          path: /opt/matrix
          type: DirectoryOrCreate 
        name: matrix-home
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hookshot
spec:
  template:
    spec:
      volumes: 
      - hostPath: 
          path: /opt/matrix
          type: DirectoryOrCreate 
        name: matrix-home
